--- a/kubernetes/pv-accessor.yaml
+++ b/kubernetes/pv-accessor.yaml
@@ -34,6 +34,7 @@ spec:
   containers:
     - name: busybox
       image: busybox
+      # The pod will be gone after one hour
       command: ["/bin/sleep", "3600" ]
       volumeMounts:
       - mountPath: /pv
