--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -33,7 +33,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # # set -g @plugin 'git@bitbucket.com/user/plugin'
 #
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
 
 # Ctr-b C to clear scrollback buffer to release memory
 bind-key C send-keys "clear && tmux clear-history" \; send-keys "Enter"  
